# shader-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LISCENCE  Readme.md  TODO.md  deploy.bat  deploy.sh  format.js  imgui.ini
RenderEngine/: Agent.cpp  Agent.h  CMakeLists.txt  ComputeObject.cpp  ComputeObject.h  ImGuiLayer.h  Object.cpp  Object.h  OutputLayer.cpp  OutputLayer.h  RenderLayer.h  RenderObject.h  Scene.h  Simulation.cpp  Simulation.h  SimulationLayer.h  imgui.ini  main.cpp  re_core.h
RenderLib/: Application.cpp  Application.h  ApplicationLayer.cpp  ApplicationLayer.h  CMakeLists.txt  Camera.cpp  Camera.h  ComptueBuffer1D.cpp  ComputeBuffer1D.h  ComputeShader.cpp  ComputeShader.h  Event.h  ImGuiLayer.cpp  ImGuiLayer.h  Log.cpp  Log.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderObject.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderUniform.cpp  ShaderUniform.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  core.h
RenderLib/Test/: ApplicationTest.h  CMakeLists.txt  CameraTest.h  ComputeBuffer1DTest.h  ComputeShaderTest.h  MaterialTest.h  RenderTextureTest.h  RendererTest.h  ShaderTest.h  ShaderUniformTest.h  TextureTest.h  imgui.ini  mainTest.cpp
ShaderEngine/: CMakeLists.txt
ShaderEngine/Platform/Linux/Core/: ApplicationLinux.cpp  FileDialogLinux.cpp
ShaderEngine/Platform/Windows/Core/: ApplicationWindows.cpp  FileDialogWindows.cpp
ShaderEngine/Tests/: ApplicationTest.h  CMakeLists.txt  CameraTest.h  ComputeBuffer1DTest.h  ComputeShaderTest.h  MainTest.cpp  MaterialTest.h  RenderTextureTest.h  RendererTest.h  SerializationTest.h  ShaderTest.h  ShaderUniformTest.h  TextureTest.h  testtest.h
ShaderEngine/src/: ShaderEngine.h  pch.h
ShaderEngine/src/Core/: Application.cpp  Application.h  ApplicationLayer.h  EntryPoint.h  FileDialog.cpp  FileDialog.h  Log.cpp  Log.h  Serial.cpp  Serial.h  core.h
ShaderEngine/src/Events/: Event.h  EventVisitor.h
ShaderEngine/src/GUI/: ComputeShaderPanel.cpp  ComputeShaderPanel.h  ImGuiLayer.cpp  OutputPanel.cpp  OutputPanel.h  Panel.cpp  Panel.h  ScenePanel.cpp  ScenePanel.h
ShaderEngine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  OutputPanel.cpp  Panel.cpp  Panel.h  ScenePanel.cpp  ScenePanel.h  ShaderPanel.cpp  ShaderPanel.h
ShaderEngine/src/Math/: glm_helpers.h
ShaderEngine/src/Renderer/: Camera.cpp  ComputeBuffer1D.h  ComputeShader.cpp  ComputeShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderUniform.cpp  ShaderUniform.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
ShaderEngine/src/Scene/: Serializable.cpp  Serializable.h
ShaderSandbox/: CMakeLists.txt
ShaderSandbox/src/: EditorLayer.cpp  EditorLayer.h  OutputLayer.cpp  OutputLayer.h  RenderLayer.h  ShaderSandboxApp.cpp
ShaderSandbox/src/Panels/: ComputeShaderStackPanel.cpp  ComputeShaderStackPanel.h  SimulationPanel.cpp  SimulationPanel.h
ShaderSandbox/src/Pannels/: OutputPanel.h  ScenePanel.h
ShaderSandbox/src/Simulation/: Agent.h  SimulationSpecification.cpp  SimulationSpecification.h
cmake/: FindBoost.cmake
deploy/: ShaderSandbox.exp  ShaderSandbox.lib  imgui.ini
deploy/res/: resource.rc
deploy/res/shaders/compute/: hello.compute
deprecated_RenderEngine/: CMakeLists.txt  ComputeObject.cpp  ComputeObject.h  Object.h  Simulation.h  SimulationLayer.h  re_core.h
deprecated_RenderEngine/Test/: CMakeLists.txt  mainTest.cpp
res/shaders/: color2D.shader  default.shader  hello.shader
res/shaders/compute/: blur.compute  conwayInteract.compute  imgui.ini  mandelbrot.compute  test-color.compute  test-propagation.compute
res/shaders/compute/simulation/: boids.compute  exampleSim.compute  imgui.ini
res/shaders/fun/: noise.shader
res/shaders/postProcessing/: conway.shader
shaders/: default.frag  default.vert  ray-tracing.frag  texture.frag  texture.shader  texture.vert
shaders/compute/: blur.compute  conway-gradient.compute  conway.compute  conwayInteract.compute  hello.compute  imgui.ini  mandelbrot.compute  test-propagation.compute
shaders/compute/simulation/: boids.compute  slime.compute
shaders/fun/: noise.shader  test.frag  test.shader  test.vert
shaders/postProcessing/: conway.shader  defaultPost.frag  defaultPost.shader  defaultPost.vert
src/: Application.cpp  Application.h  Camera.cpp  Log.h  Mesh.cpp  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  core.h  main.cpp
